[workspace]
resolver = "2"
members = [
    "contracts/*",
    "contracts/arena/io",
    "contracts/arena/state",
    "contracts/mint/io",
    "contracts/mint/state",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Gear crates
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gstd = { git = "https://github.com/gear-tech/gear",tag = "v1.0.2" }
gclient = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gear-core = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }

# Workspace crates
mint-io.path = "contracts/mint/io"
arena-io.path = "contracts/arena/io/" 
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
