[package]
name = "arena-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "78dfa07" }
gmeta = { git = "https://github.com/gear-tech/gear.git", features = ["codegen"], rev = "78dfa07" }
common = { path = "../common" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", features = ["metawasm"], rev = "78dfa07" }
