[package]
edition = "2021"
name = "example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arena-io = {path = "../arena/io/"}
example-io = {path = "./io"}
gstd = {git = "https://github.com/gear-tech/gear.git", features = ["debug"], tag = "v1.0.2"}
mint-io = {path = "../mint/io/"}
parity-scale-codec = {version = "3.6.5", default-features = false}

[build-dependencies]
example-io = {path = "./io"}
gear-wasm-builder = {git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2"}
