[package]
name = "arena-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
codec = { package = "parity-scale-codec", version = "3.6.0", default-features = false }
scale-info = { version = "2", default-features = false }
mint-io = { path = "../../mint/io/" }
